--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,14 @@
 @import "./base/animations.scss";
+    
 @import "./utils/variables.scss";
 @import "./utils/mixins.scss";
+
+@import "./layout/footer";
+
+@import "./pages/the_full_palette.scss";
+@import "./pages/the_enchanted_plate";
+@import "./pages/bastille";
+@import "./pages/le_gourmand.scss";
 
 
 @mixin footer {
