--- a/css/smart-phone.css
+++ b/css/smart-phone.css
@@ -40,7 +40,7 @@
     animation: hideLoading 2s forwards;
     position: absolute;
     right: 0;
-    bottom: 20px;
+    bottom: 366px;
     left: 35px;
   }
   .navigation {
@@ -278,7 +278,7 @@
     transform: rotate(-15deg);
     font-size: 15px;
   }
-  .rstnt-navigation-palette {
+  .rstnt-navigation {
     display: flex;
     flex-direction: row;
     padding: 30px 0 15px 0;
@@ -286,28 +286,28 @@
     align-items: center;
     justify-content: flex-start;
   }
-  .rstnt-navigation-palette a {
+  .rstnt-navigation a {
     text-decoration: none;
   }
-  .rstnt-navigation-palette i {
+  .rstnt-navigation i {
     font-size: 20px;
     color: gray;
     margin: 0 25px;
   }
-  .rstnt-navigation-palette img {
+  .rstnt-navigation img {
     width: 170px;
     margin: 0 45px;
   }
   .nav-img {
     width: 100%;
   }
-  .menu-palette {
+  .menu {
     position: relative;
     margin-top: -60px;
     background-color: #fafafa;
     border-radius: 65px 65px 0 0;
   }
-  .menu-palette h2 {
+  .menu h2 {
     padding: 30px 0 7px 25px;
     color: gray;
     font-family: Roboto;
@@ -319,14 +319,14 @@
     width: 7%;
     margin: 0 0 25px 27px;
   }
-  .menu-title-palette {
+  .menu-title {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 40px 40px 10px 25px;
   }
-  .menu-title-palette h1 {
+  .menu-title h1 {
     font-size: 30px;
     font-weight: 500;
     font-family: Shrikhand;
@@ -336,15 +336,107 @@
     font-size: 25px;
     font-weight: 100;
   }
-  .dish-palette {
+  .dish {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 10px;
   }
-  .dish-palette span {
+  .dish span {
     font-family: Roboto;
     font-size: 19px;
     font-weight: 600;
+  }
+  .dish-info {
+    width: 70%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .dish-info h3 {
+    width: auto;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding-bottom: 5px;
+    font-family: Roboto;
+    font-size: 25px;
+    font-weight: 500;
+  }
+  .dish-info p {
+    color: gray;
+    font-family: Roboto;
+    font-size: 19px;
+  }
+  .dish-info p:hover {
+    width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .visible-dish-wrap {
+    width: 95%;
+    background-color: #fff;
+    border-radius: 30px;
+    margin: 15px;
+    overflow: hidden;
+    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
+    display: flex;
+  }
+  .visible-dish-wrap:hover {
+    width: fit-content;
+    cursor: pointer;
+    transform: rotate(360deg);
+  }
+  .dish-wrap {
+    outline: 1px solid red;
+    width: 123%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: width 1s ease-out 100ms;
+  }
+  .dish-wrap > .check .fa-check-circle {
+    font-size: 35px;
+    color: #fff;
+    background-color: #99E2D0;
+    border-radius: 50%;
+    border: 1px solid #99E2D0;
+    transition: transform 1s ease-in 10ms;
+  }
+  .dish-wrap:hover > .check .fa-check-circle {
+    transform: rotate(360deg);
+  }
+  .dish-wrap:hover {
+    width: fit-content;
+    cursor: pointer;
+    transform: rotate(360deg);
+  }
+  .dish-info {
+    display: inline-block;
+    width: 75%;
+    padding-left: 15px;
+    margin: 0 50px 0 10px;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  .dish-info > p {
+    width: 80%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .check {
+    background-color: #99E2D0;
+    border-radius: 0 25px 25px 0;
+    height: 95px;
+  }
+  .fa-check-circle {
+    font-size: 35px;
+    color: #fff;
+    background-color: #99E2D0;
+    border-radius: 50%;
+    transition: transform 1s;
+    margin: 28px 32px;
   }
   .order {
     position: relative;
@@ -461,6 +553,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 10px;
   }
   .dish-plate span {
     font-family: Roboto;
@@ -492,72 +585,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-  }
-  .visible-dish-wrap {
-    position: relative;
-    background-color: #fff;
-    border-radius: 30px;
-    margin: 15px;
-    overflow: hidden;
-    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
-  }
-  .visible-dish-wrap:hover {
-    width: fit-content;
-    cursor: pointer;
-    transform: rotate(360deg);
-  }
-  .dish-wrap-plate {
-    position: relative;
-    width: 150%;
-    display: flex;
-    align-items: center;
-    transition: width 1s ease-out 100ms;
-  }
-  .dish-wrap-plate > .check .fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s ease-in 10ms;
-  }
-  .dish-wrap-plate:hover {
-    width: 100%;
-  }
-  .dish-wrap-plate:hover > .check .fa-check-circle {
-    transform: rotate(360deg);
-  }
-  .dish-wrap-plate .dish-info-plate {
-    display: inline-block;
-    width: 55%;
-    padding-left: 15px;
-    margin: 0 50px 0 10px;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  .dish-wrap-plate .dish-info-plate > p {
-    width: 80%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-  .container {
-    animation-name: container;
-    animation-duration: 3s;
-  }
-  .check {
-    background-color: #99E2D0;
-    border-radius: 0 25px 25px 0;
-    width: 100px;
-    height: 95px;
-  }
-  .fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    transition: transform 1s;
-    margin: 28px 32px;
   }
   .order {
     position: relative;
@@ -674,6 +701,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 10px;
   }
   .dish-gourmand span {
     font-family: Roboto;
@@ -705,72 +733,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-  }
-  .visible-dish-wrap {
-    position: relative;
-    background-color: #fff;
-    border-radius: 30px;
-    margin: 15px;
-    overflow: hidden;
-    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
-  }
-  .visible-dish-wrap:hover {
-    width: fit-content;
-    cursor: pointer;
-    transform: rotate(360deg);
-  }
-  .dish-wrap-gourmand {
-    position: relative;
-    width: 150%;
-    display: flex;
-    align-items: center;
-    transition: width 1s ease-out 100ms;
-  }
-  .dish-wrap-gourmand > .check .fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s ease-in 10ms;
-  }
-  .dish-wrap-gourmand:hover {
-    width: 100%;
-  }
-  .dish-wrap-gourmand:hover > .check .fa-check-circle {
-    transform: rotate(360deg);
-  }
-  .dish-wrap-gourmand .dish-info-gourmand {
-    display: inline-block;
-    width: 55%;
-    padding-left: 15px;
-    margin: 0 50px 0 10px;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  .dish-wrap-gourmand .dish-info-gourmand > p {
-    width: 80%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-  .container {
-    animation-name: container;
-    animation-duration: 3s;
-  }
-  .check {
-    background-color: #99E2D0;
-    border-radius: 0 25px 25px 0;
-    width: 100px;
-    height: 95px;
-  }
-  .fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    transition: transform 1s;
-    margin: 28px 32px;
   }
   .order {
     position: relative;
@@ -887,6 +849,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 10px;
   }
   .dish-bastille span {
     font-family: Roboto;
@@ -918,72 +881,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-  }
-  .visible-dish-wrap {
-    position: relative;
-    background-color: #fff;
-    border-radius: 30px;
-    margin: 15px;
-    overflow: hidden;
-    box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
-  }
-  .visible-dish-wrap:hover {
-    width: fit-content;
-    cursor: pointer;
-    transform: rotate(360deg);
-  }
-  .dish-wrap-bastille {
-    position: relative;
-    width: 150%;
-    display: flex;
-    align-items: center;
-    transition: width 1s ease-out 100ms;
-  }
-  .dish-wrap-bastille > .check .fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    border: 1px solid #99E2D0;
-    transition: transform 1s ease-in 10ms;
-  }
-  .dish-wrap-bastille:hover {
-    width: 100%;
-  }
-  .dish-wrap-bastille:hover > .check .fa-check-circle {
-    transform: rotate(360deg);
-  }
-  .dish-wrap-bastille .dish-info-bastille {
-    display: inline-block;
-    width: 55%;
-    padding-left: 15px;
-    margin: 0 50px 0 10px;
-    overflow: hidden;
-    white-space: nowrap;
-  }
-  .dish-wrap-bastille .dish-info-bastille > p {
-    width: 80%;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-  .container {
-    animation-name: container;
-    animation-duration: 3s;
-  }
-  .check {
-    background-color: #99E2D0;
-    border-radius: 0 25px 25px 0;
-    width: 100px;
-    height: 95px;
-  }
-  .fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: #99E2D0;
-    border-radius: 50%;
-    transition: transform 1s;
-    margin: 28px 32px;
   }
   .order {
     position: relative;
