--- a/sass/phone.scss
+++ b/sass/phone.scss
@@ -1,9 +1,17 @@
-@import "base/animations";
-
 @import "utils/variables";
 @import "utils/mixins";
 
+@import "base/animations";
+
+@import "layout/navigation";
+@import "layout/header";
 @import "layout/footer";
+
+@import "components/buttons";
+
+@import "pages/contact";
+
+
 
 @media all and (max-width: 768px) {
 
@@ -82,8 +90,6 @@
         animation-duration: 3s;
     }
 
-
-
     .loading {
         display: flex;
         justify-content: center;
@@ -91,13 +97,10 @@
         animation: hideLoading 2s forwards;
         position: absolute;
         right: 0;
-        bottom: 20px;
+        bottom: 366px;
         left: 35px;
 
     }
-
-
-
 
     // HEADER
 
@@ -395,11 +398,11 @@
         @include footer;
     }
 
-     // THE FULL PALETTE RESTAURANT'S SITE
+    // THE FULL PALETTE RESTAURANT'S SITE
 
     // NAVIGATION
 
-    .rstnt-navigation-palette {
+    .rstnt-navigation {
         @include restorant-navigation;
     }
 
@@ -409,7 +412,7 @@
 
     // THE FULL PALETTE RESTAURANT'S MAIN SECTION 
 
-    .menu-palette {
+    .menu {
         @include menu-about-pages;
     }
 
@@ -417,7 +420,7 @@
         @include line;
     }
 
-    .menu-title-palette {
+    .menu-title {
         @include menu-title;
     }
 
@@ -427,14 +430,158 @@
 
     // .menu-section {}
 
-    .dish-palette {
+    .dish {
         @include dish;
     }
 
-    // .dish-info-palette {
-    //     @include dish-title;
+    .dish-info {
+        @include dish-title;
 
-    // }
+    }
+
+    .visible-dish-wrap {
+        // position: relative;
+        width: 95%;
+        background-color: #fff;
+        border-radius: 30px;
+        margin: 15px;
+        overflow: hidden;
+        box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
+
+        &:hover {
+            width: fit-content;
+            cursor: pointer;
+            transform: rotate(360deg);
+        }
+        display: flex;
+
+    }
+
+    .dish-wrap {
+        outline: 1px solid red;
+        // position: relative;
+        width: 123%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        transition: width 1s ease-out 100ms;
+
+
+        >.check {
+            .fa-check-circle {
+                font-size: 35px;
+                color: #fff;
+                background-color: $third-color;
+                border-radius: 50%;
+                border: 1px solid $third-color;
+                transition: transform 1s ease-in 10ms;
+            }
+        }
+
+        &:hover {
+            // width: 100%;
+
+            >.check {
+                .fa-check-circle {
+                    transform: rotate(360deg);
+                }
+            }
+        }
+
+        
+        &:hover {
+            width: fit-content;
+            cursor: pointer;
+            transform: rotate(360deg);
+        }
+
+    }
+
+    .dish-info {
+        display: inline-block;
+        width: 75%;
+        padding-left: 15px;
+        margin: 0 50px 0 10px;
+        overflow: hidden;
+        white-space: nowrap;
+
+        >p {
+            width: 80%;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+    }
+
+    .check {
+        background-color: #99E2D0;
+        border-radius: 0 25px 25px 0;
+        // width: 100px;
+        height: 95px;
+        // margin: 0 0 0 -30px;
+        // position: absolute;
+        // right: 0px;
+        // bottom: 0px;
+        // z-index: -1;
+    }
+
+    .fa-check-circle {
+        font-size: 35px;
+        color: #fff;
+        background-color: $third-color;
+        border-radius: 50%;
+        transition: transform 1s;
+        margin: 28px 32px;
+        // position: absolute;
+    }
+
+    .order {
+        @include btn-order;
+    }
+
+    footer {
+        @include footer;
+    }
+
+    // THE ENCHANTED PLATE RESTAURANT'S SITE
+
+    // NAVIGATION
+
+    .rstnt-navigation-plate {
+        @include restorant-navigation;
+    }
+
+    .nav-img {
+        width: 100%;
+    }
+
+    // THE FULL PLATE RESTAURANT'S MAIN SECTION 
+
+    .menu-plate {
+        @include menu-about-pages;
+    }
+
+    .line-plate {
+        @include line;
+    }
+
+    .menu-title-plate {
+        @include menu-title;
+    }
+
+
+    .heart {
+        @include heart;
+    }
+
+    .dish-plate {
+        @include dish;
+    }
+
+    .dish-info-plate {
+        @include dish-title;
+
+    }
 
     // .visible-dish-wrap {
     //     position: relative;
@@ -453,7 +600,7 @@
 
     // }
 
-    // .dish-wrap-palette {
+    // .dish-wrap-plate {
     //     position: relative;
     //     width: 150%;
     //     display: flex;
@@ -481,7 +628,281 @@
     //         }
     //     }
 
-    //     .dish-info-palette {
+    //     .dish-info-plate {
+    //         display: inline-block;
+    //         width: 55%;
+    //         padding-left: 15px;
+    //         margin: 0 50px 0 10px;
+    //         overflow: hidden;
+    //         white-space: nowrap;
+
+    //         >p {
+    //             width: 80%;
+    //             overflow: hidden;
+    //             white-space: nowrap;
+    //             text-overflow: ellipsis;
+    //         }
+    //     }
+    // }
+
+    // .container {
+    //     animation-name: container;
+    //     animation-duration: 3s;
+    // }
+
+    // .check {
+    //     background-color: #99E2D0;
+    //     border-radius: 0 25px 25px 0;
+    //     width: 100px;
+    //     height: 95px;
+    //     // margin: 0 0 0 -30px;
+    //     // position: absolute;
+    //     // right: 0px;
+    //     // bottom: 0px;
+    //     // z-index: -1;
+    // }
+
+    // .fa-check-circle {
+    //     font-size: 35px;
+    //     color: #fff;
+    //     background-color: $third-color;
+    //     border-radius: 50%;
+    //     transition: transform 1s;
+    //     margin: 28px 32px;
+    //     // position: absolute;
+    // }
+
+
+    .order {
+        @include btn-order;
+    }
+
+    footer {
+        @include footer;
+    }
+
+    // LE GOURMAND RESTAURANT'S SITE
+
+    // NAVIGATION
+
+    .rstnt-navigation-gourmand {
+        @include restorant-navigation;
+    }
+
+    .nav-img {
+        width: 100%;
+    }
+
+    // LE GOURMAND RESTAURANT'S MAIN SECTION 
+
+    .menu-gourmand {
+        @include menu-about-pages;
+    }
+
+    .line-gourmand {
+        @include line;
+    }
+
+    .menu-title-gourmand {
+        @include menu-title;
+    }
+
+    .heart {
+        @include heart;
+    }
+
+    .dish-gourmand {
+        @include dish;
+    }
+
+    .dish-info-gourmand {
+        @include dish-title;
+
+    }
+
+    // .visible-dish-wrap {
+    //     position: relative;
+    //     // width: 93%;
+    //     background-color: #fff;
+    //     border-radius: 30px;
+    //     margin: 15px;
+    //     overflow: hidden;
+    //     box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
+
+    //     &:hover {
+    //         width: fit-content;
+    //         cursor: pointer;
+    //         transform: rotate(360deg);
+    //     }
+
+    // }
+
+    // .dish-wrap-gourmand {
+    //     position: relative;
+    //     width: 150%;
+    //     display: flex;
+    //     align-items: center;
+    //     transition: width 1s ease-out 100ms;
+
+    //     >.check {
+    //         .fa-check-circle {
+    //             font-size: 35px;
+    //             color: #fff;
+    //             background-color: $third-color;
+    //             border-radius: 50%;
+    //             border: 1px solid $third-color;
+    //             transition: transform 1s ease-in 10ms;
+    //         }
+    //     }
+
+    //     &:hover {
+    //         width: 100%;
+
+    //         >.check {
+    //             .fa-check-circle {
+    //                 transform: rotate(360deg);
+    //             }
+    //         }
+    //     }
+
+    //     .dish-info-gourmand {
+    //         display: inline-block;
+    //         width: 55%;
+    //         padding-left: 15px;
+    //         margin: 0 50px 0 10px;
+    //         overflow: hidden;
+    //         white-space: nowrap;
+
+    //         >p {
+    //             width: 80%;
+    //             overflow: hidden;
+    //             white-space: nowrap;
+    //             text-overflow: ellipsis;
+    //         }
+    //     }
+    // }
+
+    // .container {
+    //     animation-name: container;
+    //     animation-duration: 3s;
+    // }
+
+    // .check {
+    //     background-color: #99E2D0;
+    //     border-radius: 0 25px 25px 0;
+    //     width: 100px;
+    //     height: 95px;
+    //     // margin: 0 0 0 -30px;
+    //     // position: absolute;
+    //     // right: 0px;
+    //     // bottom: 0px;
+    //     // z-index: -1;
+    // }
+
+    // .fa-check-circle {
+    //     font-size: 35px;
+    //     color: #fff;
+    //     background-color: $third-color;
+    //     border-radius: 50%;
+    //     transition: transform 1s;
+    //     margin: 28px 32px;
+    //     // position: absolute;
+    // }
+
+
+    .order {
+        @include btn-order;
+    }
+
+    footer {
+        @include footer;
+    }
+
+    // BASTILLE RESTAURANT'S SITE
+
+    // NAVIGATION
+
+    .rstnt-navigation-bastille {
+        @include restorant-navigation;
+    }
+
+    .nav-img {
+        width: 100%;
+    }
+
+    // BASTILLE MAIN SECTION 
+
+    .menu-bastille {
+        @include menu-about-pages;
+    }
+
+    .line-bastille {
+        @include line;
+    }
+
+    .menu-title-bastille {
+        @include menu-title;
+    }
+
+    .heart {
+        @include heart;
+    }
+
+    .dish-bastille {
+        @include dish;
+    }
+
+    .dish-info-bastille {
+        @include dish-title;
+
+    }
+
+    // .visible-dish-wrap {
+    //     position: relative;
+    //     // width: 93%;
+    //     background-color: #fff;
+    //     border-radius: 30px;
+    //     margin: 15px;
+    //     overflow: hidden;
+    //     box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
+
+    //     &:hover {
+    //         width: fit-content;
+    //         cursor: pointer;
+    //         transform: rotate(360deg);
+    //     }
+
+    // }
+
+    // .dish-wrap-bastille {
+    //     position: relative;
+    //     width: 150%;
+    //     display: flex;
+    //     align-items: center;
+    //     transition: width 1s ease-out 100ms;
+
+    //     >.check {
+    //         .fa-check-circle {
+    //             font-size: 35px;
+    //             color: #fff;
+    //             background-color: $third-color;
+    //             border-radius: 50%;
+    //             border: 1px solid $third-color;
+    //             transition: transform 1s ease-in 10ms;
+    //         }
+    //     }
+
+    //     &:hover {
+    //         width: 100%;
+
+    //         >.check {
+    //             .fa-check-circle {
+    //                 transform: rotate(360deg);
+    //             }
+    //         }
+    //     }
+
+    //     .dish-info-bastille {
     //         display: inline-block;
     //         width: 55%;
     //         padding-left: 15px;
@@ -532,416 +953,5 @@
     footer {
         @include footer;
     }
-
-    // THE ENCHANTED PLATE RESTAURANT'S SITE
-
-    // NAVIGATION
-
-    .rstnt-navigation-plate {
-        @include restorant-navigation;
-    }
-
-    .nav-img {
-        width: 100%;
-    }
-
-    // THE FULL PLATE RESTAURANT'S MAIN SECTION 
-
-    .menu-plate {
-        @include menu-about-pages;
-    }
-
-    .line-plate {
-        @include line;
-    }
-
-    .menu-title-plate {
-        @include menu-title;
-    }
-
-    
-    .heart {
-        @include heart;
-    }
-
-    .dish-plate {
-        @include dish;
-    }
-
-    .dish-info-plate {
-        @include dish-title;
-
-    }
-
-    .visible-dish-wrap {
-        position: relative;
-        // width: 93%;
-        background-color: #fff;
-        border-radius: 30px;
-        margin: 15px;
-        overflow: hidden;
-        box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-    
-        &:hover {
-            width: fit-content;
-            cursor: pointer;
-            transform: rotate(360deg);
-        }
-    
-    }
-    
-    .dish-wrap-plate {
-        position: relative;
-        width: 150%;
-        display: flex;
-        align-items: center;
-        transition: width 1s ease-out 100ms;
-    
-        >.check {
-            .fa-check-circle {
-                font-size: 35px;
-                color: #fff;
-                background-color: $third-color;
-                border-radius: 50%;
-                border: 1px solid $third-color;
-                transition: transform 1s ease-in 10ms;
-            }
-        }
-    
-        &:hover {
-            width: 100%;
-    
-            >.check {
-                .fa-check-circle {
-                    transform: rotate(360deg);
-                }
-            }
-        }
-    
-        .dish-info-plate {
-            display: inline-block;
-            width: 55%;
-            padding-left: 15px;
-            margin: 0 50px 0 10px;
-            overflow: hidden;
-            white-space: nowrap;
-    
-            >p {
-                width: 80%;
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-            }
-        }
-    }
-    
-    .container {
-        animation-name: container;
-        animation-duration: 3s;
-    }
-    
-    .check {
-        background-color: #99E2D0;
-        border-radius: 0 25px 25px 0;
-        width: 100px;
-        height: 95px;
-        // margin: 0 0 0 -30px;
-        // position: absolute;
-        // right: 0px;
-        // bottom: 0px;
-        // z-index: -1;
-    }
-    
-    .fa-check-circle {
-        font-size: 35px;
-        color: #fff;
-        background-color: $third-color;
-        border-radius: 50%;
-        transition: transform 1s;
-        margin: 28px 32px;
-        // position: absolute;
-    }
-    
-
-    .order {
-        @include btn-order;
-    }
-
-    footer {
-        @include footer;
-    }
-
-     // LE GOURMAND RESTAURANT'S SITE
-
- // NAVIGATION
-
- .rstnt-navigation-gourmand {
-    @include restorant-navigation;
-}
-
-.nav-img {
-    width: 100%;
-}
-
-// LE GOURMAND RESTAURANT'S MAIN SECTION 
-
-.menu-gourmand {
-    @include menu-about-pages;
-}
-
-.line-gourmand {
-    @include line;
-}
-
-.menu-title-gourmand {
-    @include menu-title;
-}
-
-.heart {
-    @include heart;
-}
-
-.dish-gourmand {
-    @include dish;
-}
-
-.dish-info-gourmand {
-    @include dish-title;
-
-}
-
-.visible-dish-wrap {
-    position: relative;
-    // width: 93%;
-    background-color: #fff;
-    border-radius: 30px;
-    margin: 15px;
-    overflow: hidden;
-    box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    &:hover {
-        width: fit-content;
-        cursor: pointer;
-        transform: rotate(360deg);
-    }
-
-}
-
-.dish-wrap-gourmand {
-    position: relative;
-    width: 150%;
-    display: flex;
-    align-items: center;
-    transition: width 1s ease-out 100ms;
-
-    >.check {
-        .fa-check-circle {
-            font-size: 35px;
-            color: #fff;
-            background-color: $third-color;
-            border-radius: 50%;
-            border: 1px solid $third-color;
-            transition: transform 1s ease-in 10ms;
-        }
-    }
-
-    &:hover {
-        width: 100%;
-
-        >.check {
-            .fa-check-circle {
-                transform: rotate(360deg);
-            }
-        }
-    }
-
-    .dish-info-gourmand {
-        display: inline-block;
-        width: 55%;
-        padding-left: 15px;
-        margin: 0 50px 0 10px;
-        overflow: hidden;
-        white-space: nowrap;
-
-        >p {
-            width: 80%;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-    }
-}
-
-.container {
-    animation-name: container;
-    animation-duration: 3s;
-}
-
-.check {
-    background-color: #99E2D0;
-    border-radius: 0 25px 25px 0;
-    width: 100px;
-    height: 95px;
-    // margin: 0 0 0 -30px;
-    // position: absolute;
-    // right: 0px;
-    // bottom: 0px;
-    // z-index: -1;
-}
-
-.fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: $third-color;
-    border-radius: 50%;
-    transition: transform 1s;
-    margin: 28px 32px;
-    // position: absolute;
-}
-
-
-.order {
-    @include btn-order;
-}
-
-footer {
-   @include footer;
-}
-
-// BASTILLE RESTAURANT'S SITE
-
-// NAVIGATION
-
-.rstnt-navigation-bastille {
-    @include restorant-navigation;
-}
-
-.nav-img {
-    width: 100%;
-}
-
-// BASTILLE MAIN SECTION 
-
-.menu-bastille {
-    @include menu-about-pages;
-}
-
-.line-bastille {
-    @include line;
-}
-
-.menu-title-bastille {
-    @include menu-title;
-}
-
-.heart {
-    @include heart;
-}
-
-.dish-bastille {
-    @include dish;
-}
-
-.dish-info-bastille {
-    @include dish-title;
-
-}
-
-.visible-dish-wrap {
-    position: relative;
-    // width: 93%;
-    background-color: #fff;
-    border-radius: 30px;
-    margin: 15px;
-    overflow: hidden;
-    box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    &:hover {
-        width: fit-content;
-        cursor: pointer;
-        transform: rotate(360deg);
-    }
-
-}
-
-.dish-wrap-bastille {
-    position: relative;
-    width: 150%;
-    display: flex;
-    align-items: center;
-    transition: width 1s ease-out 100ms;
-
-    >.check {
-        .fa-check-circle {
-            font-size: 35px;
-            color: #fff;
-            background-color: $third-color;
-            border-radius: 50%;
-            border: 1px solid $third-color;
-            transition: transform 1s ease-in 10ms;
-        }
-    }
-
-    &:hover {
-        width: 100%;
-
-        >.check {
-            .fa-check-circle {
-                transform: rotate(360deg);
-            }
-        }
-    }
-
-    .dish-info-bastille {
-        display: inline-block;
-        width: 55%;
-        padding-left: 15px;
-        margin: 0 50px 0 10px;
-        overflow: hidden;
-        white-space: nowrap;
-
-        >p {
-            width: 80%;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-    }
-}
-
-.container {
-    animation-name: container;
-    animation-duration: 3s;
-}
-
-.check {
-    background-color: #99E2D0;
-    border-radius: 0 25px 25px 0;
-    width: 100px;
-    height: 95px;
-    // margin: 0 0 0 -30px;
-    // position: absolute;
-    // right: 0px;
-    // bottom: 0px;
-    // z-index: -1;
-}
-
-.fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: $third-color;
-    border-radius: 50%;
-    transition: transform 1s;
-    margin: 28px 32px;
-    // position: absolute;
-}
-
-.order {
-    @include btn-order;
-}
-
-footer {
-    @include footer;
-}
 
 }
