--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -75,6 +75,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-right: 10px;
 
     // &-price {
     //     // vertical-align: super;
